@@ -19,13 +19,13 @@
       (documentation (sys::function-name x) 'function)))
   (:method ((x list) (doc-type (eql 'function)))
     (declare (ignore doc-type))
-    (check-function-name 'documentation x)
+    (check-function-name x 'documentation)
     (if (and (fboundp x) (typep-class (fdefinition x) <standard-generic-function>))
       (std-gf-documentation (fdefinition x))
       (documentation (second x) 'setf)))
   (:method ((x list) (doc-type (eql 'compiler-macro)))
     (declare (ignore doc-type))
-    (documentation (second (check-function-name  'documentation x))
+    (documentation (second (check-function-name  x 'documentation))
                    'setf-compiler-macro))
   (:method ((x symbol) (doc-type (eql 'function)))
     (if (and (fboundp x) (typep-class (fdefinition x) <standard-generic-function>))
@@ -109,15 +109,14 @@
       (sys::%set-documentation (sys::function-name x) 'function new-value)))
   (:method (new-value (x list) (doc-type (eql 'function)))
     (declare (ignore doc-type))
-    (check-function-name '(setf documentation) x)
+    (check-function-name x '(setf documentation))
     (if (and (fboundp x) (typep-class (fdefinition x) <standard-generic-function>))
       (setf (std-gf-documentation (fdefinition x)) new-value)
       (sys::%set-documentation (second x) 'setf new-value)))
   (:method (new-value (x list) (doc-type (eql 'compiler-macro)))
     (declare (ignore doc-type))
-    (sys::%set-documentation
-     (second (check-function-name '(setf documentation) x))
-     'setf-compiler-macro new-value))
+    (check-function-name x '(setf documentation))
+    (sys::%set-documentation (second x) 'setf-compiler-macro new-value))
   (:method (new-value (x symbol) (doc-type (eql 'function)))
     (if (and (fboundp x) (typep-class (fdefinition x) <standard-generic-function>))
       (setf (std-gf-documentation (fdefinition x)) new-value)
